k8s/deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: web
  labels:
    name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: null-web
  namespace: web
spec:
  selector:
    matchLabels:
      app: null-web
  template:
    metadata:
      labels:
        app: null-web
    spec:
      containers: 
      - name: null-web
        image: nullchannel/nullcloud-frontend:c825467ce275fa2d190f398f7356411acc32c968
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
