k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: null-web
spec:
  selector:
    app: null-web
  ports:
  - port: 80
    targetPort: 8080
